gap fixed

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -29,7 +29,7 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 10px;
+        gap: 70px;
         left: 31px;
 
         // .nav-item {
